--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,19 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "v7.7.0",
-        "laravel/framework": "v10.13.5",
+        "laravel/framework": "v10.14.1",
         "laravel/sanctum": "v3.2.5",
         "laravel/tinker": "v2.8.1",
         "nutgram/laravel": "v1.0.1"
     },
     "require-dev": {
-        "fakerphp/faker": "v1.23.0",
-        "laravel/pint": "v1.10.2",
-        "laravel/sail": "v1.22.0",
-        "mockery/mockery": "v1.6.2",
-        "nunomaduro/collision": "v7.6.0",
-        "phpunit/phpunit": "v10.2.2",
-        "spatie/laravel-ignition": "v2.1.3"
+        "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.18",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
